Fixed responsive design on mobile landscape

--- a/src/assets/scss/components/mobile/index.scss
+++ b/src/assets/scss/components/mobile/index.scss
@@ -54,7 +54,7 @@
 // Mobile landscape
 @media (max-width: 50em) and (orientation: landscape) {
 	body {
-		font-size: 0.6em;
+		font-size: 0.4em;
 	}
 	.App {
 		.App-content {
@@ -71,7 +71,7 @@
 	}
 
 	.TagList {
-		font-size: 0.8em;
+		font-size: 1em;
 		width: 100%;
 	}
 }
